--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
-input:valid{
-    border: 2px solid black; 
-    background-color: #e8f5e9;
-    padding: 5px;
-  }
-  input:invalid{
-    border: 2px dashed red;
-     background-color: #ffebee;
-    padding: 5px;
-  }
-  .error-message {
-    color: red;
-    font-size: 12px;
-    display: none;
-  }
+input:valid {
+  border: 1px solid #ced4da; 
+  background-color: #e8f5e9; 
+  padding: 5px;
+}
+
+input:invalid {
+  border: 1px solid #ced4da; 
+  background-color: #ffebee; 
+  padding: 5px;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  display: none;
+}
